update articls and logo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/ankh-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Discover unique hieroglyphic-inspired designs and learn about ancient Egyptian writing at Egyphs - your premier destination for Egyptian-inspired products." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
